--- a/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
+++ b/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
@@ -261,7 +261,7 @@
       letter-spacing: 0.3px ! important;
     }
   }
-  @media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+  @media only screen and (device-width: 1024px) {
    
      .B4T_ServicesDiv{
       margin-left: 50px ! important;
@@ -276,7 +276,7 @@
   }
    @media only screen  and (min-device-width: 2048px){
     .B4T_ServicesDiv{
-      margin-left: 110px ! important;
+      margin-left: 85px ! important;
       width: 830px ! important;
     }
   } 
