--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -186,11 +186,7 @@
     }
  }  
 
-@media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 1366px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (device-width: 1024px)  {
     .TypebtnText{
       margin-left: 0px ! important;
     }
@@ -198,11 +194,8 @@
       margin-top: 140px ! important;
     }
  }   
- @media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 768px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+ @media only screen and (device-width: 1024px) 
+  {
     .TypebtnText{
       margin-left: 0px ! important;
     }
@@ -211,11 +204,7 @@
     }
  }   
  @media only screen 
-  and (min-width: 1440px) 
-  and (max-height: 900px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
-   
+  and (min-width: 1440px){
     .BtnImageDown{
       margin-top:0px ! important;
     }
