--- a/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
+++ b/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
@@ -261,7 +261,7 @@ left: 35% ! important;
 /* Styles */
 }
 
-@media only screen and (device-width: 1024px) and (device-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (device-width: 1024px){
 	.All1blog1{
 		margin-left: 55px ! important;
 	}
