--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -200,7 +200,7 @@ color: #fff;
 
 .add1{
   position: relative;
-    left: 577px;
+    left: 550px;
     z-index: 100;
     height: 75px;
     top: 248px;
@@ -2823,13 +2823,13 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   }*/
  }
 
- @media only screen  and (min-width: 1024px) and (max-height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+ @media only screen  and (min-width: 1024px){
     .journytextblock{
       width: 76% ! important;
     }
   }
 
-@media only screen and (device-width: 1024px) and (device-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (device-width: 1024px){
    .roadjourny img{
     left:400px ! important;
    }
@@ -2904,7 +2904,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     top: 1123px ! important;
    }
   } 
-  @media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+  @media only screen and (device-width: 1024px) {
    .roadjourny img{
     left:400px ! important;
    }
@@ -4379,13 +4379,16 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   }   
 @media only screen and (device-width: 1680px) 
  {
-      .roadjourny img{
+  .roadjourny img{
     left:-249px ! important;
     z-index: 0! important ;
   }
+  .journybg1{
+    display: none;
+  }
   .add1{
     opacity: 1;
-    left: 387px ! important;
+    left: 345px ! important;
     z-index: 0! important ;
   }
   .add9{
@@ -5305,7 +5308,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   }
   .add1{
     opacity: 1;
-    left:957px ! important;
+    left:886px ! important;
   }
   .Journycaro1{
     opacity: 1;
@@ -5436,12 +5439,12 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   }
   .roadjourny img{
     left:-567px ! important;
-     z-index: 0! important ;
+     /*z-index: 0! important ;*/
   }
   .add1{
     opacity: 1;
-    left:851px ! important;
-     z-index: 0! important ;
+    left:765px ! important;
+    z-index: 0! important ;
   }
   .Journycaro1{
     opacity: 1;
@@ -5603,7 +5606,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
   }
   .add1{
     opacity: 1;
-    left:957px ! important;
+    left:886px ! important;
     z-index: 0! important ;
   }
   .Journycaro1{
@@ -5909,7 +5912,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
 
  }
 
- @media only screen and (device-width: 1024px) and (device-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+ @media only screen and (device-width: 1024px) {
     .Journycaro4{
       display: none;
 
@@ -6254,7 +6257,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
       z-index: 0;
     }
     .add1{
-      left: 644px ! important;
+      left: 595px ! important;
       opacity: 1;
       z-index: 0;
     }
@@ -6370,7 +6373,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
        z-index: 0! important ;
     }
     .add1{
-      left: 606px ! important;
+      left: 550px ! important;
       opacity: 1;
        z-index: 0! important ;
     }
@@ -6488,7 +6491,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
        z-index: 0! important ;
     }
     .add1{
-      left: 564px ! important;
+      left: 510px ! important;
       opacity: 1;
        z-index: 0! important ;
     }
