--- a/ui/website/src/common/Footer/Footer.css
+++ b/ui/website/src/common/Footer/Footer.css
@@ -506,19 +506,14 @@ ul.no-icon-list1 {
 
 }
 @media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 1366px) 
-  and (orientation: landscape) 
+  and (device-width: 1024px)
  {
     .footer-two{
       height: 340px ! important;
     }
 }
 
-@media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 768px) 
-  and (orientation: landscape) 
+@media only screen and (device-width: 1024px)
  {
     .footer-two{
       height: 438px ! important;
@@ -529,11 +524,7 @@ ul.no-icon-list1 {
 }
 
 
-@media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (device-width: 1024px) {
     .pt20{
       padding-top: 20px ! important;
     }
@@ -560,20 +551,13 @@ ul.no-icon-list1 {
     .newcard_HD{
       width: 220px ! important;
     }
-    .newcard {
-    width: 255px ! important;
-    }
     .navigation_tab{
       margin-left: 25px ! important;
     }.new_wizardNotefor9{
       right: 0px ! important;
     }
   } 
-  @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+  @media only screen and (device-width: 1024px) {
      .footer-two{
     height: 440px ! important;
   }
@@ -584,17 +568,9 @@ ul.no-icon-list1 {
       padding: 0px;
     }
 }
-
-  @media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 1366px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
-     .newcard_HD{
-      width: 220px ! important;
-    }
-    .newcard {
-    width: 355px ! important;
+@media only screen and (device-width: 1024px){
+    .padding_640{
+      margin-left: 0px ! important;
     }
     .footerdiv1{
       padding: 0px;
@@ -604,7 +580,7 @@ ul.no-icon-list1 {
     }
 
 }
- @media only screen and (device-width: 1024px) and (device-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (device-width: 1024px) {
      .Journycaro9{
       left:-25px;
      }
