--- a/ui/website/src/common/Footer/Footer.css
+++ b/ui/website/src/common/Footer/Footer.css
@@ -24,7 +24,9 @@
   top: 900px;
 */}
 
-
+ .pt20{
+      padding-top: 20px ! important;
+    }
 .footer-two{
  font-size: 16px;
  color: #fff ! important;
