--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -95,14 +95,6 @@
   }
 }
 
-
-
-
-
-
-
-
-
 .journybg {
     background-image: url(/images/journy1.png);
     background-size: 65% 100%;
@@ -375,9 +367,6 @@ color: #fff;
 .Journycaro8 h3{
   text-align: left;
 }
-
-
-
 .Journycaro1{
     z-index: 1000;
     position: absolute;
@@ -737,8 +726,6 @@ a.nameParts{
   margin: 20px auto;
   background: rgba(245, 236, 236, 0.25);
   border-radius: 23px;
-  /*-webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);*/
-  /*box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(0, 0, 0, 0.3);*/
 }
 .labelSwitch{
   margin-top: 10px;
@@ -761,7 +748,6 @@ a.nameParts{
   margin-top: 0px!important;
   margin-left: 0px!important;
 }
-
 .switch {
   position: relative;
   height: 28px;
@@ -769,11 +755,7 @@ a.nameParts{
   margin: 20px auto;
   background: rgba(245, 236, 236, 0.25);
   border-radius: 23px;
-  /*-webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);*/
-  /*box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(0, 0, 0, 0.3);*/
 }
-
-
 .switch-label {
   position: relative;
   z-index: 2;
@@ -833,14 +815,6 @@ a.nameParts{
   height: 22px;
   border-radius: 23px;
   background-color: #444;
- /* background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9dd993), color-stop(100%, #65bd63));
-  background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -ms-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -o-linear-gradient(top, #9dd993, #65bd63);
-  background-image: linear-gradient(top, #9dd993, #65bd63);*/
-  /*-webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);*/
-  /*box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);*/
   -webkit-transition: left 0.15s ease-out;
   -moz-transition: left 0.15s ease-out;
   -ms-transition: left 0.15s ease-out;
@@ -856,10 +830,6 @@ a.nameParts{
   background-image: -o-linear-gradient(top, #4fc9ee, #3aa2d0);
   background-image: linear-gradient(top, #4fc9ee, #3aa2d0);
 }
-
-
-/* switch2*/
-
 .switch1 {
   position: relative;
   height: 28px;
@@ -867,11 +837,7 @@ a.nameParts{
   margin: 20px auto;
   background: rgba(245, 236, 236, 0.25);
   border-radius: 23px;
-  /*-webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);*/
-  /*box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(0, 0, 0, 0.3);*/
 }
-
-
 .switch-label1 {
   position: relative;
   z-index: 2;
@@ -933,14 +899,6 @@ a.nameParts{
   height: 22px;
   border-radius: 23px;
   background-color: #444;
- /* background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9dd993), color-stop(100%, #65bd63));
-  background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -ms-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -o-linear-gradient(top, #9dd993, #65bd63);
-  background-image: linear-gradient(top, #9dd993, #65bd63);*/
-  /*-webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);*/
-  /*box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);*/
   -webkit-transition: left 0.15s ease-out;
   -moz-transition: left 0.15s ease-out;
   -ms-transition: left 0.15s ease-out;
@@ -976,14 +934,6 @@ a.nameParts{
   height: 22px;
   border-radius: 23px;
   background-color: #444;
- /* background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9dd993), color-stop(100%, #65bd63));
-  background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -ms-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -o-linear-gradient(top, #9dd993, #65bd63);
-  background-image: linear-gradient(top, #9dd993, #65bd63);*/
-  /*-webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);*/
-  /*box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);*/
   -webkit-transition: left 0.15s ease-out;
   -moz-transition: left 0.15s ease-out;
   -ms-transition: left 0.15s ease-out;
@@ -1076,14 +1026,6 @@ a.nameParts{
   height: 22px;
   border-radius: 23px;
   background-color: #444;
- /* background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9dd993), color-stop(100%, #65bd63));
-  background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -ms-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -o-linear-gradient(top, #9dd993, #65bd63);
-  background-image: linear-gradient(top, #9dd993, #65bd63);*/
-  /*-webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);*/
-  /*box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);*/
   -webkit-transition: left 0.15s ease-out;
   -moz-transition: left 0.15s ease-out;
   -ms-transition: left 0.15s ease-out;
@@ -3437,9 +3379,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
       }
  }
 
-@media only screen 
-    and (device-width : 1440px) 
-    and (device-height : 900px) { 
+@media only screen and (device-width : 1440px)  { 
     .Journycaro10{
        opacity: 1;
       left: 480px ! important;
@@ -3999,58 +3939,8 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
       .responsivefooter{
         height: 640px ! important;
       }
- }
-
- @media only screen and (device-width : 1024px) and (device-height : 1366px) { 
-
-   .add1{
-    left:594px;
-   }
-   .add2{
-    left:6px;
-   }
-   .roadjourny img{
-    left:385px;
-   }
-   .Journycaro1 {
-    left: 521px ! important;
-    }
-    .Journycaro2 {
-    left: 260px ! important;
-  }
-  .add6{
-    left:72px;
-  }
-  .Journycaro4{
-    left:628px;
-  }
-  .Journycaro5{
-    left:628px;
-  }
-  .Journycaro7{
-    left:377px;
-  }
-  .add7 {
-    position: relative;
-    left: 811px;
-    top: 83px;
-    opacity: 0;
-  }
-  .Journycaro8 {
-    z-index: 1000;
-    position: absolute;
-    top: 1323px;
-    left: 566px;
-    /* opacity: 0; */
-}
-
-.iogimg_4{
-  margin-left: 0px ! important;
-}
-
-
-} 
- @media only screen and (device-width : 1024px) and (device-height : 768px) { 
+ } 
+ @media only screen and (device-width : 1024px) { 
 
    .add1{
     left:583px;
@@ -4338,8 +4228,6 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     top: 1125px ! important;
     left: 282px ! important;
     z-index: 0! important ;
-
-
   }
   .Journycaro9{
     opacity: 1;
