--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -81,16 +81,21 @@
     color: #333;
     font-weight: 500;
  }
-@media only screen 
-    and (device-width : 1440px) 
-    and (device-height : 900px) { 
+@media only screen and (device-width : 1440px){ 
     .new_wizardNotefor5{
-    right: 25px ! important;
+    right: 50px ! important;
+  }
+  .new_round-tabfor5{
+    margin-left: 19% ! important;
+  }
+  .new_round-tabfor4{
+    margin-left: 82% ! important;
+  }
+  .new_wizardNotefor4{
+    margin-left: -20% ! important;
   }
 }
-@media only screen 
-    and (device-width : 1920px) 
-    and (device-height : 768px) { 
+@media only screen and (device-width : 1920px) and (device-height : 768px) { 
     .new_wizardNotefor4{
     right: -110px ! important;
   }
@@ -331,17 +336,6 @@
     bottom:14px;
 
 }
-/*.navigationTitle_for6{
-    color: #ffffff;
-    position: absolute; 
-    top: -12px;
-    left: 3px;
-    font-weight: 600;
-    font-size: 23px;
-    bottom:14px;
-
-}*/
-
 .navigationTitle_for6
 {   
     color: #333;
@@ -374,9 +368,7 @@
   .navigation_tab{
     margin-left: 20px ! important;
 
-  }
-
-  
+  } 
 }
 @media only screen and (max-width : 767px)
 {
@@ -401,17 +393,6 @@
  .para-top_website{
     margin-top: 20px ! important;
  }
- /*.B4T_ServicesDiv{
-    margin-left: 73px ! important;
-    min-height: 150px;
-    width: 580px;
- }*/
- /*.B2T1_line{
-    margin-left: 174px ! important;
- }*/
-/* .B2T1_line1{
-    margin-left:345px ! important;
- }*/
  .B2T_serviceTitle{
     margin-left: 190px;
  }
@@ -517,7 +498,7 @@
         right: -252px ! important;
     }
     .new_round-tabfor5{
-      margin-left: 64% ! important;
+      margin-left: 35% ! important;
     }
 
   }
@@ -577,7 +558,7 @@
       }
      
   } 
-    @media only screen and (device-width : 320px) { 
+@media only screen and (device-width : 320px) { 
     .adjustfor5{
        /*width : 268px ! important;*/
        margin-left: 0px ! important;
@@ -727,9 +708,7 @@
     }
 
 }
-@media only screen and (device-width: 1440px) and (device-height: 900px) 
-
-  /*and (orientation: landscape) */
+@media only screen and (device-width: 1440px) 
  { 
   .B3T_challengesDiv{
     margin-left: 35px;
@@ -770,7 +749,7 @@
         right: 5px ! important;
      }
      .new_round-tabfor3{
-      margin-left: 156% ! important;
+      margin-left: 160% ! important;
      }
      .new_wizardNotefor3{
       right: -198px ! important;
@@ -780,8 +759,7 @@
      }
 
   } 
-
-   @media only screen and (device-width : 384px) and (device-height : 640px) { 
+@media only screen and (device-width : 384px) and (device-height : 640px) { 
     .new_round-tabfor5 {
         margin-left: 37% ! important;
     }
@@ -796,7 +774,7 @@
     }
    
  }
-  @media only screen and (device-width : 411px) and (device-height : 823px) { 
+@media only screen and (device-width : 411px) and (device-height : 823px) { 
     .new_round-tabfor5 {
         margin-left: 37% ! important;
     }
@@ -818,7 +796,7 @@
    }
    
  }
- @media only screen and (device-width : 400px) and (device-height : 700px){ 
+@media only screen and (device-width : 400px) and (device-height : 700px){ 
   .new_round-tabfor5 {
         margin-left: 30% ! important;
     }
@@ -829,7 +807,7 @@
      margin-left: 14% ! important;
     } 
  }
- @media only screen and (device-width : 401px) and (device-height : 700px){ 
+@media only screen and (device-width : 401px) and (device-height : 700px){ 
   .new_round-tabfor5 {
         margin-left: 30% ! important;
     }
@@ -840,7 +818,7 @@
      margin-left: 14% ! important;
     } 
  }
- @media only screen and (device-width : 401px){ 
+@media only screen and (device-width : 401px){ 
   .new_round-tabfor5 {
         margin-left: 30% ! important;
     }
@@ -851,7 +829,7 @@
      margin-left: 14% ! important;
     } 
  }
- @media only screen and (device-width : 375px) and (device-height : 667px){ 
+@media only screen and (device-width : 375px) and (device-height : 667px){ 
  .new_round-tabfor6{
     margin-left: 11% ! important;
    }
@@ -859,7 +837,6 @@
     right: 11px ! important;
    }
  }  
-
 @media only screen and (device-width : 411px) and (device-height : 823px){ 
   .new_round-tabfor6 {
       margin-left: 35% ! important;
@@ -873,7 +850,6 @@
     right: 7px ! important;
   }
 }  
-
 @media only screen and (device-width : 320px) and (device-height : 568px){ 
   .new_wizardNote_for6{
     right: 8px ! important;
@@ -997,6 +973,12 @@
   }
   .new_wizardNotefor5{
     right: 47px ! important;
+  }
+  .new_round-tabfor4{
+    margin-left: 82% ! important;
+  }
+  .new_wizardNotefor4{
+    right: -42% ! important;
   }
  }
 @media only screen and (device-width : 1680px) and (device-height : 1050px) { 
