--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -170,11 +170,7 @@
 
   }
 
-  @media only screen 
-  and (device-width: 1440px) 
-  and (device-height: 900px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (device-width: 1440px)  {
     .Typecomp2Btn_img {
       padding-left: 25px ! important;
     }
