--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -7,6 +7,12 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
     font-family: 'Raleway', sans-serif ! important;
     /*color:#000;*/
 }
+.input-group .form-control{
+    z-index: 0 ! important;
+  }
+.dropZindex{
+    z-index: 0 ! important;
+}
 .marginTopMobile{
   margin-bottom: 35px ! important;
 }
@@ -1793,22 +1799,21 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
    }
    .Typecomp_1_img img{
       width: 100%;
-
     }
-    .Type2Img img{
+   .Type2Img img{
       width: 85% ! important;
 
     }
-    .TypebtnText{
+   .TypebtnText{
       margin-left: 270px ! important;
     }
-    .TypecomponentBtnImg{
+   .TypecomponentBtnImg{
       margin-left: 200px ! important;
     }
-    .ApplicationImg{
+   .ApplicationImg{
       padding-left: 225px ! important;
     }
-    .B3T_challengesDiv {
+   .B3T_challengesDiv {
       top: 45px;
       box-shadow: 0px 0px 3px 2px #c4bfbf;
       margin-left: 147px;
@@ -1818,52 +1823,49 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
       height: 232px;
       padding-top: 35px;
     }
-    .newcard {
+  .newcard {
         width: 475px ! important;
     }
-    .new_round-tabfor9{
+  .new_round-tabfor9{
       margin-left: 67% ! important;
     }
-    .new_wizardNotefor9{
+  .new_wizardNotefor9{
       right: -52px ! important;
     }
-    .new_wizardNote_for6{
+  .new_wizardNote_for6{
       right: 102px ! important;
     }
-    .Allblog{
+  .Allblog{
     margin-left: 80px  ! important;
-  }
-    .newcard{
+    }
+  .newcard{
       width: 450px ! important;
       margin-left: 15px ! important
     }
-    .Mobile_leftPadd{
+  .Mobile_leftPadd{
       /*margin-left: 290px !important;*/
     }
-    .MacProPdding{
+  .MacProPdding{
       margin-left: 50px ! important;
     }
-    .TypebtnText_Padding{
+  .TypebtnText_Padding{
           padding-top: 4% ! important;
       }
-      .MacProPddingfor3{
+  .MacProPddingfor3{
         margin-left: 290px ! important;
       }
-      .MacProPddingfor_{
+  .MacProPddingfor_{
         margin-left: 265px ! important;
       }
-      .newcard_HD {
+  .newcard_HD {
         width: 500px ! important;
         margin-left: 30px ! important;
       }
-      .B2T_p{
-        /*text-align: center ! important;*/
-      }
-       .B2T_p ul li{
-        /*text-align: left ! important;*/
-      }
+   .input-group .form-control{
+        z-index: 0 ! important;
+      } 
    }    
-    @media only screen and (device-width: 2560px){
+@media only screen and (device-width: 2560px){
    .Allblog{
     width: 430px ! important;
    }
@@ -1874,20 +1876,20 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
       width: 100%;
 
     }
-    .Type2Img{
+   .Type2Img{
       width: 85% ! important;
 
     }
-    .TypebtnText{
+  .TypebtnText{
       margin-left: 270px ! important;
     }
-    .TypecomponentBtnImg{
+  .TypecomponentBtnImg{
       margin-left: 200px ! important;
     }
-    .ApplicationImg{
+  .ApplicationImg{
       padding-left: 225px ! important;
     }
-    .B3T_challengesDiv {
+   .B3T_challengesDiv {
       top: 45px;
       box-shadow: 0px 0px 3px 2px #c4bfbf;
       margin-left: 147px;
@@ -1910,8 +1912,8 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
       right: 102px ! important;
     }
     .Allblog{
-    margin-left: 80px  ! important;
-  }
+        margin-left: 80px  ! important;
+      }
     .newcard{
       width: 450px ! important;
       margin-left: 15px ! important
@@ -1924,13 +1926,16 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
     }
     .TypebtnText_Padding{
           padding-top: 4% ! important;
-      }
-      .MacProPddingfor3{
+    }
+    .MacProPddingfor3{
         margin-left: 290px ! important;
-      }
-      .MacProPddingfor_{
+    }
+    .MacProPddingfor_{
         margin-left: 265px ! important;
       }
+    .input-group .form-control{
+        z-index: 0 ! important;
+      }  
    }    
  @media only screen and (device-width : 1680px) and (device-height : 1050px) { 
   .newcard_HD {
@@ -1938,6 +1943,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   }
   .roadjourny{
     z-index: 0;
+  }
+  .input-group .form-control{
+    z-index: 0 ! important;
   }
  }
  @media only screen and (device-width : 1680px){ 
@@ -1962,6 +1970,15 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .ApplicationImg{
     padding-left: 70px ! important;
   }
+  .input-group .form-control{
+    z-index: 0 ! important;
+  }
+  .jobformcontent{
+        margin-left: 500px ! important;
+    }
+  .jobpageform{
+        margin-top: 50px ! important;
+    }  
  }
  @media only screen and (device-width : 1280px) and (device-height : 800px) { 
   .All1blog1{
@@ -1989,6 +2006,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   }
   .newcard{
     width: 260px ! important;
+  }
+  .input-group .form-control{
+    z-index: 0 ! important;
   }
  }
  @media screen and (device-width: 1920px){
@@ -2022,9 +2042,15 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .Type2Img{
     width: 85% ! important;
   }
-   .iconCircle{
-        margin-left: 40% ! important;
+  .iconCircle{
+      margin-left: 40% ! important;
      }
+  .jobformcontent{
+        margin-left: 630px ! important;
+    }
+    .jobpageform{
+        margin-top: 50px ! important;
+    }   
 
  }
   @media screen and (device-width: 1856px){
@@ -2054,9 +2080,18 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .roadjourny{
     z-index: -1;
   }
-   .iconCircle{
-        margin-left: 39% ! important;
-     }
+ .iconCircle{
+    margin-left: 39% ! important;
+ }
+ .input-group .form-control{
+    z-index: 0 ! important;
+  }
+ .jobformcontent{
+        margin-left: 600px ! important;
+    }
+ .jobpageform{
+        margin-top: 50px ! important;
+    }   
  }
   @media screen and (device-width: 1792px){
 
@@ -2085,6 +2120,15 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .roadjourny{
     z-index: 0;
   }
+  .input-group .form-control{
+    z-index: 0 ! important;
+  }
+  .jobformcontent{
+        margin-left: 600px ! important;
+    }
+  .jobpageform{
+        margin-top: 50px ! important;
+    }  
  }
 @media only screen and (device-width : 1152px) {
    .newcard_HD{
@@ -2106,6 +2150,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .TypebtnText{
     margin-left: 0px ! important;
   }
+  .input-group .form-control{
+    z-index: 0 ! important;
+  }
  } 
 
 @media only screen and (device-width : 1600px) {
@@ -2124,6 +2171,15 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .roadjourny{
     z-index: 0;
   }
+  .input-group .form-control{
+    z-index: 0 ! important;
+  }
+  .jobformcontent{
+        /*margin-left: 500px ! important;*/
+    }
+  .jobpageform{
+        margin-top: 50px ! important;
+    }  
 }
 @media only screen and (device-width : 800px) {
   .serflip-cardservices img{
@@ -2191,10 +2247,16 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
     .Expertise_maindiv{
         margin-left: 0px ! important;
     }
+    .input-group .form-control{
+    z-index: 0 ! important;
+  }
  } 
  @media only screen and (device-width : 3200px) {
   .newcard_HD{
     width: 460px ! important;
+  }
+  .input-group .form-control{
+    z-index: 0 ! important;
   }
 
  }
