--- a/ui/website/src/common/Footer/Footer.css
+++ b/ui/website/src/common/Footer/Footer.css
@@ -614,7 +614,7 @@ ul.no-icon-list1 {
     line-height: 20px;
   }
  }
-@media only screen and (device-width : 2560px) and (device-height : 1600px) {
+@media only screen and (device-width : 2560px){
    .pt20 {
       padding-top: 17px ! important;
   }
