--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -207,6 +207,22 @@
   display: block;
 }
 
+@media only screen  and (device-width: 768px) {
+    .dropdown-content a {
+    float: none;
+    /*color: black;*/
+    padding: 15px 16px ! important;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-size: 12px;  
+    font-weight: normal;
+  }
+
+   
+  }
+
+
 @media only screen 
   and (device-width: 1440px) 
   and (device-height: 900px) 
@@ -1406,10 +1422,7 @@ border:1px solid #eee ! important;
 }
  
   @media only screen 
-  and (device-width: 768px) 
-  and (device-height: 1024px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+  and (device-width: 768px)  {
     .setlogo{
       padding-left: 15px ! important;
     }
